<resources>
    <string name="app_name">Assignment2</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="get_started">GET STARTED</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="user">User</string>
</resources>
