<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms_and_conditions"
        android:textColor="#009688"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="#2196F3"
        android:text="@string/get_started"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/month"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:background="@drawable/input_border"
        android:ems="10"
        android:hint="@string/month"
        android:inputType="textPersonName"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/day"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/day"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:background="@drawable/input_border"
        android:ems="10"
        android:hint="@string/day"
        android:inputType="textPersonName"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/year"
        app:layout_constraintStart_toEndOf="@+id/month"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/year"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:background="@drawable/input_border"
        android:ems="10"
        android:hint="@string/year"
        android:inputType="textPersonName"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/day"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:background="@drawable/input_border"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/month"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/input_border"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/confirmPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:background="@drawable/input_border"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="2dp"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toStartOf="@+id/email"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:background="@drawable/input_border"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/name" />

    <ImageView
        android:id="@+id/userImg"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_marginBottom="20dp"
        android:background="#01579B"
        android:contentDescription="@string/user"
        android:padding="110dp"
        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:foreground="@drawable/ic_person_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/userImg"
        app:layout_constraintEnd_toEndOf="@+id/userImg"
        app:layout_constraintStart_toStartOf="@+id/userImg"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/circle" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="42dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/userImg"
        app:layout_constraintStart_toStartOf="@+id/userImg"
        app:srcCompat="@drawable/ic_camera_alt_black_24dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="Update Cover Photo"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/userImg"
        app:layout_constraintStart_toEndOf="@+id/imageView5" />

</androidx.constraintlayout.widget.ConstraintLayout>